Mask reads and run pciseq

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,9 +9,7 @@ profiles {
     params {
       samplesheet = "${projectDir}/samplesheet.csv"
       outdir      = "${projectDir}/outputs/nf"
-      stage       = "E14"
-      sc_expr     = "${projectDir}/test_data/single_cell/CartanaJF_singlecell_df.txt"
-      sc_meta     = "${projectDir}/test_data/single_cell/CartanaJF_singlecell_meta_df.txt"
+      sc_h5ad     = "${projectDir}/test_data/single_cell/Cartana_simplified_fixname.h5ad"
     }
 
     process {
