transform pciseq to Tangram-ready object

--- a/envs/pciseq.yml
+++ b/envs/pciseq.yml
@@ -10,6 +10,10 @@ dependencies:
   - scipy
   - scanpy
   - anndata
+  - matplotlib
+  - seaborn
+  - squidpy
   - pip
   - pip:
       - pciSeq
+      - tangram-sc==1.0.2
