Wrap up process into modules

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,12 @@ profiles {
       withName: PROCESS_SCRNA        { cpus = 2; memory = '4 GB' }
     }
   }
+  general {
+    process {
+      conda = "${projectDir}/envs/general.yml"
+    }
+    conda.enabled = true
+  }
   system { conda.enabled = false }
 }
 
