--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,35 @@ profiles {
       withName: PROCESS_SCRNA        { cpus = 2; memory = '4 GB' }
     }
   }
+  panel2 {
+    params {
+      samplesheet = "${projectDir}/samplesheet_panel2.csv"
+      outdir      = "${projectDir}/outputs/panel_2"
+      sc_h5ad     = "${projectDir}/test_data/single_cell/Cartana_simplified_fixname.h5ad"
+    }
+
+    process {
+      executor = 'local'
+      withName: FILTER_CELLS_BY_TISSUE { cpus = 2; memory = '2 GB' }
+      withName: PROCESS_SCRNA        { cpus = 2; memory = '4 GB' }
+    }
+  }
+  hpc_panel2 {
+    params {
+      samplesheet = "${projectDir}/samplesheet_panel2.csv"
+      outdir      = "${projectDir}/outputs/panel_2"
+      sc_h5ad     = "${projectDir}/test_data/single_cell/Cartana_simplified_fixname.h5ad"
+    }
+
+    process {
+      container = "oras://community.wave.seqera.io/library/nextflow_anndata_matplotlib_numpy_pruned:d5bfb9b94099e013"
+    }
+
+    singularity {
+      enabled = true
+      cacheDir = "${System.getenv('APPTAINER_CACHEDIR') ?: "${System.getenv('HOME')}/.cache/apptainer"}"
+    }
+  }
   general {
     process {
       conda = "${projectDir}/envs/general.yml"
