Add settings for hpc users

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ manifest {
 workDir = "${projectDir}/work"
 
 profiles {
+
   test {
     params {
       samplesheet = "${projectDir}/samplesheet.csv"
@@ -14,10 +15,12 @@ profiles {
 
     process {
       executor = 'local'
-      withName: FILTER_CELLS_BY_TISSUE { cpus = 2; memory = '2 GB' }
-      withName: PROCESS_SCRNA        { cpus = 2; memory = '4 GB' }
+      conda    = "${projectDir}/envs/general.yml"
     }
+
+    conda.enabled = true
   }
+
   panel2 {
     params {
       samplesheet = "${projectDir}/samplesheet_panel2.csv"
@@ -27,11 +30,31 @@ profiles {
 
     process {
       executor = 'local'
-      withName: FILTER_CELLS_BY_TISSUE { cpus = 2; memory = '2 GB' }
-      withName: PROCESS_SCRNA        { cpus = 2; memory = '4 GB' }
+      conda    = "${projectDir}/envs/general.yml"
+    }
+
+    conda.enabled = true
+  }
+
+  test_hpc {
+    params {
+      samplesheet = "${projectDir}/samplesheet.csv"
+      outdir      = "${projectDir}/outputs/nf"
+      sc_h5ad     = "${projectDir}/test_data/single_cell/Cartana_simplified_fixname.h5ad"
+    }
+
+    process {
+      executor  = 'slurm'
+      container = "oras://community.wave.seqera.io/library/nextflow_anndata_matplotlib_numpy_pruned:d5bfb9b94099e013"
+    }
+
+    singularity {
+      enabled  = true
+      cacheDir = System.getenv('APPTAINER_CACHEDIR') ?: "${System.getenv('HOME')}/.cache/apptainer"
     }
   }
-  hpc_panel2 {
+
+  panel2_hpc {
     params {
       samplesheet = "${projectDir}/samplesheet_panel2.csv"
       outdir      = "${projectDir}/outputs/panel_2"
@@ -39,25 +62,13 @@ profiles {
     }
 
     process {
+      executor  = 'slurm'
       container = "oras://community.wave.seqera.io/library/nextflow_anndata_matplotlib_numpy_pruned:d5bfb9b94099e013"
     }
 
     singularity {
-      enabled = true
-      cacheDir = "${System.getenv('APPTAINER_CACHEDIR') ?: "${System.getenv('HOME')}/.cache/apptainer"}"
+      enabled  = true
+      cacheDir = System.getenv('APPTAINER_CACHEDIR') ?: "${System.getenv('HOME')}/.cache/apptainer"
     }
   }
-  general {
-    process {
-      conda = "${projectDir}/envs/general.yml"
-    }
-    conda.enabled = true
-  }
-  system { conda.enabled = false }
-}
-
-conda {
-  enabled = true
-  // Use conda unless mamba is installed
-  useMamba = false
 }
